Basic html content

--- a/index.html
+++ b/index.html
@@ -2,8 +2,72 @@
 <html>
 <head>
     <title>Campus Life</title>
+    <style>
+        img {
+            width: 200px;
+        }
+    </style>
 </head>
 <body>
-    
+    <header id="banner">
+        <h1>Student Life</h1>
+        <p>
+            This is the banner
+        </p>
+        
+    </header>
+    <nav id="navigation">
+        <p>
+            This is my nav bar
+        </p>
+        <div style="display:flex;width:100%;justify-content: space-between;">
+            <a href='#studentOrganizations'>Student Organizations</a>
+            <a href='#upcomingEvents'>Upcoming Events</a>
+            <a href='#campusNews'>Campus News</a>
+        </div>
+    </nav>
+    <section id="studentOrganizations">
+        <h2>Student Organizations</h3>
+        <section>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/ChessSet.jpg/800px-ChessSet.jpg">
+            <h3>Chess Club</h3>
+            <p>about the chess club</p>
+        </section>
+        <section>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/97/US_Navy_110713-N-NT881-124_Personnel_Specialist_2nd_Class_James_Vail%2C_left%2C_and_Boatswain%27s_Mate_2nd_Class_Nathaniel_Eaton_play_board_games_with_ch.jpg">
+            <h3>Board Game Club</h3>
+            <p>about the board game club</p>
+        </section>
+        <section>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Palacky_Court_Room_1.JPG/220px-Palacky_Court_Room_1.JPG" alt="Generic Chess Set">
+            <h3>Moot Court</h3>
+            <p>about the Moot Court Team</p>
+        </section>
+    </section>
+    <section id="upcomingEvents">
+        <h2>Upcomming Events</h3>
+        <section>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Inflable_openaircinema.jpg/220px-Inflable_openaircinema.jpg">
+            <h3>Movie Night</h3>
+            <p>about the upcoming movie night</p>
+        </section>
+        <section>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Sven_Vath_playing_at_Amnesia.JPG">
+            <h3>Rave on the quad</h3>
+            <p>about the upcoming rave on the quad</p>
+        </section>
+        <section>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/President_Barack_Obama.jpg/1200px-President_Barack_Obama.jpg" alt="Generic Chess Set">
+            <h3>Guest Speaker</h3>
+            <p>about the upcoming guest speaker</p>
+        </section>
+    </section>
+    <section id="campusNews">
+        <h2>Campus News</h2>
+        <p>here will be the campus news</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid neque non reprehenderit nemo quasi harum nam sed dolorem, deserunt sapiente eaque sunt quas veniam cum sequi porro ad voluptatum.
+        </p>
+    </section>
 </body>
 </html>
